<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/action_add"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/action_delete"/>
    <item
        android:id="@+id/action_email"
        android:icon="@drawable/ic_email_black_24dp"
        android:title="@string/action_email"/>
    <item
        android:id="@+id/action_sms"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/action_sms"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/action_settings"/>
</menu>
