<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/nav_message"/>
        <item
            android:id="@+id/nav_email"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/nav_email"/>
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/nav_add"/>
        <item
            android:id="@+id/nav_delete"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/nav_delete"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings"/>
    </group>

</menu>
